working on scrollto function thing and fixing div jump at map

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -49,3 +49,8 @@ nav {
 		margin: 11px 0px 0px 0px;
 	}
 }
+
+.sticky + .container-fluid {
+    padding-top: 60px;
+}
+
